Refactor CI/CD pipeline for lib-Q with major performance optimizations, enhanced security architecture, and improved maintainability. Introduce parallel execution, smart caching, and modular design for reusable actions. Update documentation and add new guides for performance benchmarking and security validation. Ensure compliance with NIST standards and streamline automated publishing processes.

--- a/.github/actions/test-ascon/action.yml
+++ b/.github/actions/test-ascon/action.yml
@@ -147,5 +147,5 @@ runs:
         echo "Verifying constant-time operations..."
         cd ${{ inputs.working-directory }}
         # Run specific tests that verify constant-time behavior
-        cargo test --test constant_time --no-default-features
+        cargo test --test constant_time
         echo "Constant-time verification completed"
